# atools

./: CMakeLists.txt  Findatools.cmake  ReadMe.txt  atools.files  atools.includes
doc/: doxygen_project_name.conf  main.dox
src/: CMakeLists.txt
src/alg_fc/: alg_fc.cpp  alg_fc.h
src/cv_fc/: cv_fc.cpp  cv_fc.h
src/debug_fc/: debug_fc.cpp  debug_fc.h
src/examples/: CMakeLists.txt  atools_function_tests.cpp  atools_tests.cpp  cv_tests.cpp
src/math_fc/: math_fc.cpp  math_fc.h
src/rot_fc/: rot_fc.cpp  rot_fc.h
